#80 - set dropped flag to order (#287)
* #80 - set dropped flag to order

* #80 - add respective tests